--- a/final.html
+++ b/final.html
@@ -54,11 +54,12 @@
                                 </div>
 
                                 <div class="mt-3 p-3 bg-dark rounded">
-                                    <small class="text-muted">
+                                    <small class="text-white">
                                         <i class="fas fa-lightbulb me-1"></i>
                                         <strong>Dica:</strong> Copie e cole as frases na ordem acima no campo ao lado
                                     </small>
                                 </div>
+
                             </div>
                         </div>
                     </div>
