--- a/final.html
+++ b/final.html
@@ -56,7 +56,7 @@
                                 <div class="mt-3 p-3 bg-dark rounded">
                                     <small class="text-white">
                                         <i class="fas fa-lightbulb me-1"></i>
-                                        <strong>Dica:</strong> Copie e cole as frases na ordem acima no campo ao lado
+                                        <strong>Dica:</strong> Copie e paste as frases na ordem acima no campo ao lado
                                     </small>
                                 </div>
 
@@ -138,6 +138,14 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Botão de Compartilhar Conquista -->
+                        <div class="mt-4">
+                            <button id="btnCompartilharConquista" class="btn btn-warning btn-lg">
+                                <i class="fas fa-share-alt me-2"></i>
+                                Compartilhar Conquista
+                            </button>
+                        </div>
                     </div>
                 </div>
 
@@ -148,7 +156,6 @@
                             <i class="fas fa-home me-2"></i>
                             Voltar ao Início
                         </button>
-
                     </div>
                 </div>
 
@@ -156,8 +163,66 @@
         </div>
     </div>
 
+    <!-- Modal de Compartilhamento -->
+    <div id="shareModal" class="share-modal" style="display: none;">
+        <div class="share-modal-content">
+            <div class="share-modal-header">
+                <h3>🎉 Compartilhar Conquista!</h3>
+                <button class="share-close-btn" onclick="finalShareManager.closeModal()">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+
+            <div class="share-preview-container">
+                <div id="sharePreview" class="share-preview">
+                    <!-- Preview da imagem será gerado aqui -->
+                </div>
+            </div>
+
+            <div class="share-actions">
+                <p class="share-instruction">Compartilhe nas redes sociais:</p>
+
+                <div class="share-buttons-grid">
+                    <button class="share-btn instagram" onclick="finalShareManager.shareToInstagram()">
+                        <i class="fab fa-instagram"></i>
+                        <span>Instagram</span>
+                    </button>
+
+                    <button class="share-btn tiktok" onclick="finalShareManager.shareToTikTok()">
+                        <i class="fab fa-tiktok"></i>
+                        <span>TikTok</span>
+                    </button>
+
+                    <button class="share-btn twitter" onclick="finalShareManager.shareToTwitter()">
+                        <i class="fab fa-twitter"></i>
+                        <span>Twitter/X</span>
+                    </button>
+
+                    <button class="share-btn facebook" onclick="finalShareManager.shareToFacebook()">
+                        <i class="fab fa-facebook"></i>
+                        <span>Facebook</span>
+                    </button>
+
+                    <button class="share-btn whatsapp" onclick="finalShareManager.shareToWhatsApp()">
+                        <i class="fab fa-whatsapp"></i>
+                        <span>WhatsApp</span>
+                    </button>
+
+                    <button class="share-btn download" onclick="finalShareManager.downloadImage()">
+                        <i class="fas fa-download"></i>
+                        <span>Salvar Imagem</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Canvas para gerar imagem de compartilhamento -->
+    <canvas id="shareCanvas" style="display: none;" width="1080" height="1080"></canvas>
+
     <script src="./js/trilhas.js"></script>
     <script src="./js/final.js"></script>
+    <script src="./js/compartilhar-final.js"></script>
 </body>
 
 </html>
