--- a/pista.html
+++ b/pista.html
@@ -96,7 +96,7 @@
                 <i class="fas fa-keyboard me-2"></i>Sua Resposta:
               </label>
               <div class="input-group">
-                <input type="text" class="form-control form-control-lg" id="respostaInput"
+                <input type="text" class=" form-control-lg" id="respostaInput"
                   placeholder="Digite a resposta que encontrou no livro..." autocomplete="off">
                 <button class="btn btn-warning btn-lg" type="button" id="btnVerificar">
                   <i class="fas fa-check me-2"></i>Verificar
